--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,11 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id "dagger.hilt.android.plugin"
+//    id "dagger.hilt.android.plugin"
+    id 'kotlin-android-extensions'
+    id 'com.google.dagger.hilt.android'
+
+
 }
 
 android {
@@ -32,6 +36,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -45,8 +52,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //hilt
-    implementation "com.google.dagger:hilt-android:2.41"
-    kapt "com.google.dagger:hilt-android-compiler:2.40.5"
+    implementation 'com.google.dagger:hilt-android:2.45'
+    kapt 'com.google.dagger:hilt-compiler:2.45'
+//    implementation "com.google.dagger:hilt-android:2.41"
+//    kapt "com.google.dagger:hilt-android-compiler:2.40.5"
     kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0"
 
     // Retrofit
@@ -58,7 +67,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
 
-    implementation 'androidx.activity:activity-ktx:1.3.1'
+    implementation 'androidx.activity:activity-ktx:1.6.1'
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
@@ -67,5 +76,6 @@ dependencies {
 
     implementation project(path: ':domain')
     implementation project(path: ':data')
+
 
 }
